--- a/project/.travis.yml
+++ b/project/.travis.yml
@@ -6,8 +6,11 @@ python:
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
 # command to install dependencies
+  - "pip install -U pip"
+  - "python setup.py install
 install:
   - pip install -r requirements.txt
+  - pip3 install holidays
 # command to run tests
 script:
   - pytest
