--- a/project/.travis.yml
+++ b/project/.travis.yml
@@ -1,16 +1,21 @@
 language: python
 python:
+  - "2.7"
+  - "3.4"
   - "3.5"
   - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
+  - "nightly"  # nightly build
 # command to install dependencies
+before_install:
   - "pip install -U pip"
-  - "python setup.py install
+  - "python setup.py install"
+  - "sudo apt-get update"
 install:
   - pip install -r requirements.txt
-  - pip3 install holidays
+  - pip install holidays
 # command to run tests
 script:
   - pytest
