--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 # command to install dependencies
 before_install:
   - "pip install -U pip"
-  - "python setup.py install"
+  - "python project/setup.py install"
   - "sudo apt-get update"
 install:
   - pip install -r requirements.txt
