--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ Pillow==5.1.0
 pluggy==0.6.0
 py==1.5.2
 pycrypto==2.6.1
-pygobject==3.26.1
+#pygobject==3.26.1
 PyMeeus==0.3.7
 pytest==3.3.2
 python-dateutil==2.8.1
